	  po/sane-backends.nl.po po/sane-backends.no.po
	  po/sane-backends.pl.po po/sane-backends.pt.po
	  po/sane-backends.ru.po po/sane-backends.sv.po: Updated Danish
	  translation (from Mogens Jaeger <mogensjaeger@get2net.dk>). Made
	  sure that no errors occur because xgettext/xmsgfmt think that
	  "%" is a C format string. Regenerated all po files. 

2005-07-07  Frank Zago

	* AUTHORS backend/leo.c backend/leo.h backend/matsushita.c
	  backend/matsushita.h backend/sceptre.c backend/sceptre.h
	  backend/teco1.c backend/teco1.h backend/teco2.c backend/teco2.h
	  backend/teco3.c backend/teco3.h frontend/tstbackend.c: new
	  email address.
	
2005-07-07  Gerhard Jaeger <gerhard@gjaeger.de>

	* doc/plustek/Plustek-USB.changes: Update.
	* backend/plustek.c: Fixed scanarea calculation.
	* backend/plustek-usbshading.c: Fixed fine-white calibration.

2005-07-05  Gerhard Jaeger <gerhard@gjaeger.de>

	* doc/descriptions-external/epkowa.desc: Updated according to
	  the info provided by  Olaf Meeuwissen <olaf.meeuwissen@avasys.jp>

2005-07-04  Gerhard Jaeger <gerhard@gjaeger.de>

	* doc/plustek/Plustek-USB.changes: Update.
	* backend/plustek.[ch] backend/plustek-usbscan.c 
	  backend/plustek-usbshading.c backend/plustek-usbdevs.c
	  backend/plustek-usbdevs.c backend/plustek-usbimg.c
	  backend/plustek-usbmap.c backend/plustek-usbhw.c
	  backend/plustek-usbcal.c backend/plustek-usb.[ch]:
	  Added button support, did some cleanup, added IPC between
	  reader- and parent-process.

2005-07-04  ULrich Deiters <ulrich.deiters@uni-koeln.de>

	* inserted a definition for SSIZE_MAX in backend/canon.h

2005-07-03  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/sm3600.c: Don't check the result of
	  usb_find_busses(). Based on patch from Julien BLACHE
	  <jb@jblache.org>. 
	* doc/descriptions/genesys.desc: Used
	  "Medion/Lifetec/Tevion/Cytron" as manufacturer as in the other
	  backends. Used "ScanJet 2300C" as model name as in other
	  backends.